--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -18,6 +18,21 @@
   border-radius: 5px;
 }
 
+.message-sender {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.message-text {
+  margin-bottom: 5px;
+}
+
+.message-timestamp {
+  font-size: 0.8em;
+  color: #888;
+  text-align: right;
+}
+
 @media (max-width: 1200px) {
   .chat {
     padding: 15px;
